<resources>
    <string name="app_name">Kalkulator</string>
    <string name="ac">AC</string>
    <string name="delete">DEL</string>
    <string name="tujuh">7</string>
    <string name="delapan">8</string>
    <string name="sembilan">9</string>
    <string name="bagi">/</string>
    <string name="empat">4</string>
    <string name="lima">5</string>
    <string name="enam">6</string>
    <string name="kali">x</string>
    <string name="satu">1</string>
    <string name="dua">2</string>
    <string name="tiga">3</string>
    <string name="kurang">-</string>
    <string name="titik">.</string>
    <string name="nol">0</string>
    <string name="sama_dengan">=</string>
    <string name="tambah">+</string>
</resources>