<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">


    <TextView
        android:text="0"
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/custom_divider"
        android:gravity="fill_horizontal"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResult">

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="2"
            android:backgroundTint="@color/silver"
            android:text="@string/ac"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/silver"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDivider"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/bagi"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/custom_divider"
        android:gravity="fill_horizontal"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout1">

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/tujuh"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/delapan"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/sembilan"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/kali"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/custom_divider"
        android:gravity="fill_horizontal"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout2">

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/empat"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/lima"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/enam"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/kurang"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/custom_divider"
        android:gravity="fill_horizontal"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout3">

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/satu"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/dua"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/tiga"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/tambah"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/custom_divider"
        android:gravity="fill_horizontal"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout4">

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/gray"
            android:text="@string/nol"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/sama_dengan"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>